text from sami branch

--- a/index.html
+++ b/index.html
@@ -1,7 +1,1 @@
-my name is adnan sami
-i love bangladesh
-i am from dhaka
-i know html and css
-hello there
-aklsjdkajsdk aksdj
-aksjdlka skdjas kd
+this is sami branch
