--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hello this is a heading!</h1>
     <p>this is a new feature</p>
+    <p>this is a new feature 2</p>
 </body>
 </html>
